small mobile layout issue

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,16 +1,18 @@
 @import "~@/scss/hamburger.scss";
 
-html,
-body {
+html{
     margin: 0;
     padding: 0;
-    width: 100%;
+    min-width: 100%;
     height: 100%;
-    font-family: LifeCraft;
     font-size: 22px;
+    background-color: var(--bs-info);
 }
 
 body {
+    font-family: LifeCraft;
+    background-color: var(--bs-info);
+    min-width: 100%;
     &::-webkit-scrollbar {
         width: 10px;
         height: 20px;
@@ -78,4 +80,9 @@ hr{
     height:8px;
     background-size:contain;
     opacity: 1;
+}
+
+.text-small{
+    font-size: x-small;
+    font-weight:lighter;
 }
